--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "dts-bundle": "git+https://github.com/grunt-ts/dts-bundle.git"
+    "dts-bundle": "^0.1.1"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
